# robots

./: README.md
minitask1/: CMakeLists.txt  package.xml
minitask1/scripts/: minitask1.py
minitask2/: CMakeLists.txt  obstacle_avoidance.py  package.xml  random_walk.py  randomwalk.py  ros_minitask2.launch  wall_walk.py
minitask3/: CMakeLists.txt  package.xml
minitask3/Scripts/: green_walk.py  random_turn.py  random_walk.py  script.py
minitask3/launch/: follower.launch  main.launch  turtlebot3_corridors.launch
minitask3/msg/: state_mt3.msg
minitask3/scripts/: follower.py
minitask3/worlds/: corridor_world.world
minitask4/: CMakeLists.txt  package.xml
minitask4/launch/: main.launch  move_base.launch
minitask4/map/: mymap.pgm
minitask4/scripts/: minitask4.py
minitask5/: CMakeLists.txt  package.xml
minitask5/launch/: launch_world.launch  main.launch  minitask5_navigation.launch  move_base.launch  rviz.launch
minitask5/maps/: mymap.pgm
minitask5/msg/: controller.msg  frontiers.msg  image_proc.msg  object_data.msg
minitask5/param/: costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  frontier_mapping_params.yaml  main_params.yaml  mapping_params.yaml
minitask5/scripts/: frontier_finder.py  frontier_mapping.py  image_proc.py  main.py  mapping.py  move_to.py  object_avoid.py  scan_obj.py
minitask5/worlds/: comp4034_training.world
